ui. Show time when app with same date

--- a/Diagnosis.App/Controls/CardParts/CardItem.xaml
+++ b/Diagnosis.App/Controls/CardParts/CardItem.xaml
@@ -30,6 +30,7 @@
     </UserControl.Resources>
 
     <Grid>
-        <headers:Holder DataContext="{Binding Holder}" />
+        <headers:Holder DataContext="{Binding Holder}" 
+                        TimeVisibility="{Binding DataContext.ShowAppTime, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=UserControl}}" />
     </Grid>
 </UserControl>
