--- a/Diagnosis.App/Controls/Headers/Holder.xaml
+++ b/Diagnosis.App/Controls/Headers/Holder.xaml
@@ -1,27 +1,54 @@
 ﻿<UserControl x:Class="Diagnosis.App.Controls.Headers.Holder"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:headers="clr-namespace:Diagnosis.App.Controls.Headers"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             x:Name="holder"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <controls:HrsHolderDataTemplateSelector x:Key="selector">
             <controls:HrsHolderDataTemplateSelector.PatientTemplate>
                 <DataTemplate>
-                    <headers:Patient />
+                    <DockPanel>
+                        <TextBlock Text="{Binding Actual, Converter={StaticResource ManToShortName}}"
+                            VerticalAlignment="Center"
+                            Visibility="{Binding NoName, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                            MinWidth="30" />
+                        <TextBlock Text="{Binding IsMale, Converter={StaticResource SexToSign}}"
+                           FontSize="20"
+                           Margin="20,0,5,0"
+                           VerticalAlignment="Center" />
+                        <TextBlock Margin="5,0,10,0"
+                            VerticalAlignment="Center">
+                            <TextBlock Text="{Binding Age}" />
+                            <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" />
+                        </TextBlock>
+                    </DockPanel>
                 </DataTemplate>
             </controls:HrsHolderDataTemplateSelector.PatientTemplate>
             <controls:HrsHolderDataTemplateSelector.CourseTemplate>
                 <DataTemplate>
-                    <headers:Course />
+                    <TextBlock>
+                        <Run>
+                             <MultiBinding Converter="{StaticResource DateIntervalLabel}">
+                                <Binding Path="Start" Mode="OneWay" />
+                                <Binding Path="End" Mode="OneWay" />
+                            </MultiBinding>
+                        </Run>
+                    </TextBlock>
                 </DataTemplate>
             </controls:HrsHolderDataTemplateSelector.CourseTemplate>
             <controls:HrsHolderDataTemplateSelector.AppointmentTemplate>
                 <DataTemplate>
-                    <headers:Appointment />
+                    <TextBlock>
+                        <Run Text="{Binding DateAndTime, Converter={StaticResource DateLabel}}" />
+                        <TextBlock Visibility="{Binding TimeVisibility, ElementName=holder}">
+                            <Run Text="{Binding DateAndTime, StringFormat={}{0:H:mm}}" />
+                        </TextBlock>
+                    </TextBlock>
                 </DataTemplate>
             </controls:HrsHolderDataTemplateSelector.AppointmentTemplate>
         </controls:HrsHolderDataTemplateSelector>
