--- a/Diagnosis.App/Screens/Words.xaml
+++ b/Diagnosis.App/Screens/Words.xaml
@@ -31,7 +31,7 @@
                     <TextBlock>
                         <Run IsEnabled="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType=Button}}" ToolTip="Искать выбранные слова ()">Искать</Run>
                         <TextBlock Text="{Binding CheckedWords, StringFormat='{}({0})'}"
-                                    Visibility="{Binding CheckedWords, Converter={StaticResource CountToVisibility}, ConverterParameter=1}" />
+                                    Visibility="{Binding CheckedWords, Converter={StaticResource MoreThanToVisibility}, ConverterParameter=1}" />
                     </TextBlock>
                 </DockPanel>
             </Button>
